--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles\styles.css">
     <title>Test</title>
 </head>
 <body>
-
+<nav>
+    <div class="logo">Platzhaltettext</div>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Log in</a></li>
+        <li><a href="#">Queen</a></li>
+    </ul>
+</nav>
+<section>
+    <img src="img\wallpaper2.jpg" alt="">
+</section>
 </body>
 </html>
