--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav>
-    <div class="logo">Platzhaltettext</div>
+    <div class="logo">Sunset Concerts ツ</div>
     <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Log in</a></li>
