--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </ul>
 </nav>
 <section>
-    <img src="img\bts-concert.jpg" alt="">
+    <img src="C:\Users\mara_\Desktop\LB02_Luisa_Mara\img\coldplay.jpg" alt="">
 </section>
 </body>
 </html>
