--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio website</title>
+	<title>LB02</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,14 +15,13 @@
     <!----Header Start---->
 	<div class="hero">
 		<nav>
-			<h2 class="logo">Portfo<span>lio</span></h2>
+			<h2 class="logo">Sunset<span>Concerts</span> ツ</h2>
 			<ul>
 				<li><a href="#">Home</a></li>
-				<li><a href="#">About Us</a></li>
-				<li><a href="#">Services</a></li>
-				<li><a href="#">Skills</a></li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="#">Artists</a></li>
+				<li><a href="#">Concerts</a></li>
+				<li><a href="#">Places</a></li>
 			</ul>
-			<a href="#" class="btn">Subscribe</a>
+			<a href="#" class="btn">Login</a>
 		</nav>
         <!---- Header end  ---->
