--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!----Header Start---->
 	<div class="hero">
 		<nav>
-			<h2 class="logo">Sunset<span>Concerts</span> ツ</h2>
+			<h2 class="logo">Sunset<span>Concerts</span></h2>
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">Artists</a></li>
@@ -25,3 +25,16 @@
 			<a href="#" class="btn">Login</a>
 		</nav>
         <!---- Header end  ---->
+
+		<!------footer start--------->
+		<footer>
+			<p>by Luisa and Mara</p>
+			<p>This website was made for a school project and isnt official. We'd like to give credits to Tahmid Ahmed and thank him for the amazing tutorial he made about this website template!</p>
+			<div class="social">
+				<a href="#"><i class="fab fa-facebook-f"></i></a>
+				<a href="#"><i class="fab fa-instagram"></i></a>
+				<a href="#"><i class="fab fa-dribbble"></i></a>
+			</div>
+
+		</footer>
+		<!------footer end--------->
