--- a/index.html
+++ b/index.html
@@ -1,40 +1,117 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>LB02</title>
+	<title>LB02 Luisa und Mara</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 <body>
-	<!----hero Section start---->
-    <!----Header Start---->
-	<div class="hero">
-		<nav>
-			<h2 class="logo">Sunset<span>Concerts</span></h2>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Artists</a></li>
-				<li><a href="#">Concerts</a></li>
-				<li><a href="#">Places</a></li>
-			</ul>
-			<a href="#" class="btn">Login</a>
-		</nav>
-        <!---- Header end  ---->
+<!----hero Section start---->
 
-		<!------footer start--------->
-		<footer>
-			<p>by Luisa and Mara</p>
-			<p>This website was made for a school project and isnt official. We'd like to give credits to Tahmid Ahmed and thank him for the amazing tutorial he made about this website template!</p>
-			<div class="social">
-				<a href="#"><i class="fab fa-facebook-f"></i></a>
-				<a href="#"><i class="fab fa-instagram"></i></a>
-				<a href="#"><i class="fab fa-dribbble"></i></a>
+<div class="hero">
+	<nav>
+		<h2 class="logo">Sunset<span>Concerts</span></h2>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Artists</a></li>
+			<li><a href="#">Concerts</a></li>
+			<li><a href="#">Places</a></li>
+		</ul>
+		<a href="#" class="btn">Login</a>
+	</nav>
+
+	<div class="content">
+		<h4>Welcome to SunsetConcerts</h4>
+		<h1>Get Tickets <span>Now</span></h1>
+		<h3>Sunset Concerts gets you going.</h3>
+		<div class="newslatter">
+			<form>
+				<input type="email" name="email" id="mail" placeholder="Enter Your Email">
+				<input type="submit" name="submit" value="Login">
+			</form>
+		</div>
+	</div>
+</div>
+
+<!----About section start---->
+<section class="about">
+	<div class="main">
+		<img src="img/main-img.png">
+		<div class="about-text">
+			<h2>About Me</h2>
+			<h5>Developer <span>& Designer</span></h5>
+			<p>I am a front-end web developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.A responsive design makes your website accessible to all users, regardless of their device.</p>
+			<button type="button">Let's Talk</button>
+		</div>
+	</div>
+</section>
+
+<!-----service section start----------->
+<div class="service">
+	<div class="title">
+		<h2>Our Services</h2>
+	</div>
+
+	<div class="box">
+		<div class="card">
+			<i class="fas fa-bars"></i>
+			<h5>Web Development</h5>
+			<div class="pra">
+				<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+
+				<p style="text-align: center;">
+					<a class="button" href="#">Read More</a>
+				</p>
 			</div>
+		</div>
 
-		</footer>
-		<!------footer end--------->
+		<div class="card">
+			<i class="far fa-user"></i>
+			<h5>Web Development</h5>
+			<div class="pra">
+				<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+
+				<p style="text-align: center;">
+					<a class="button" href="#">Read More</a>
+				</p>
+			</div>
+		</div>
+
+		<div class="card">
+			<i class="far fa-bell"></i>
+			<h5>Contest</h5>
+			<div class="pra">
+				<p>Wanna win a free ticket? Let's see if you can guess the same number as the random generator. Can you outsmart it? Give it a try.</p>
+
+				<p style="text-align: center;">
+					<a class="button" href="#">Let's go</a>
+				</p>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!------Contact Me------>
+<div class="contact-me">
+	<p>Let Me Get You A Beautiful Website.</p>
+	<a class="button-two" href="#">Hire Me</a>
+</div>
+
+<!------footer start--------->
+<footer>
+	<p>Tahmid Ahmed</p>
+	<p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
+	<div class="social">
+		<a href="#"><i class="fab fa-facebook-f"></i></a>
+		<a href="#"><i class="fab fa-instagram"></i></a>
+		<a href="#"><i class="fab fa-dribbble"></i></a>
+	</div>
+	<p class="end">CopyRight By Tahmid Ahmed</p>
+</footer>
+</body>
+</html>
