Text Anpassungen Footer und Header sowie Inhalt angefangen

--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
 <!----About section start---->
 <section class="about">
 	<div class="main">
-		<img src="img/main-img.png">
+		<img src="C:\Users\mara_\Desktop\LB02_Luisa_Mara\img\Test_5.jpeg">
 		<div class="about-text">
-			<h2>About Me</h2>
-			<h5>Developer <span>& Designer</span></h5>
-			<p>I am a front-end web developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.A responsive design makes your website accessible to all users, regardless of their device.</p>
-			<button type="button">Let's Talk</button>
+
+			<button type="button">Learn More</button>
 		</div>
 	</div>
 </section>
@@ -60,7 +58,7 @@
 	<div class="box">
 		<div class="card">
 			<i class="fas fa-bars"></i>
-			<h5>Web Development</h5>
+			<h5>Login</h5>
 			<div class="pra">
 				<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
 
@@ -72,7 +70,7 @@
 
 		<div class="card">
 			<i class="far fa-user"></i>
-			<h5>Web Development</h5>
+			<h5>Artists</h5>
 			<div class="pra">
 				<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
 
@@ -104,14 +102,13 @@
 
 <!------footer start--------->
 <footer>
-	<p>Tahmid Ahmed</p>
-	<p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
+	<p>by Luisa and Mara</p>
+	<p>This website was made for a school project and isnt official. We'd like to give credits to Tahmid Ahmed and thank him for the amazing tutorial he made about this website template!</p>
 	<div class="social">
 		<a href="#"><i class="fab fa-facebook-f"></i></a>
 		<a href="#"><i class="fab fa-instagram"></i></a>
 		<a href="#"><i class="fab fa-dribbble"></i></a>
 	</div>
-	<p class="end">CopyRight By Tahmid Ahmed</p>
 </footer>
 </body>
 </html>
