New HTML files (artists, concerts, places)

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	<nav>
 		<h2 class="logo">Sunset<span>Concerts</span></h2>
 		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Artists</a></li>
-			<li><a href="#">Concerts</a></li>
-			<li><a href="#">Places</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="artists.html">Artists</a></li>
+			<li><a href="concerts.html">Concerts</a></li>
+			<li><a href="places.html">Places</a></li>
 		</ul>
 		<a href="#" class="btn">Login</a>
 	</nav>
@@ -75,7 +75,7 @@
 				<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
 
 				<p style="text-align: center;">
-					<a class="button" href="#">Read More</a>
+					<a class="button" href="artists.html">Read More</a>
 				</p>
 			</div>
 		</div>
