New HTML files (artists, contest, about us)

--- a/contest.html
+++ b/contest.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Artists</title>
+    <title>Contest</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
