--- a/about_us.html
+++ b/about_us.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Artists</title>
+    <title>About us</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
