--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="artists.html">Artists</a></li>
-			<li><a href="concerts.html">Concerts</a></li>
-			<li><a href="places.html">Places</a></li>
+			<li><a href="contest.html">Contest</a></li>
+			<li><a href="about_us.html">About us</a></li>
 		</ul>
 		<a href="#" class="btn">Login</a>
 	</nav>
