--- a/artists.html
+++ b/artists.html
@@ -26,6 +26,10 @@
         </nav>
     </div>
 </header>
+
+<div class="div1">
+
+</div>
 <div class="slideshow-container">
 
     <!-- Full-width images with number and caption text -->
