--- a/about_us.html
+++ b/about_us.html
@@ -17,7 +17,7 @@
             <h2 class="logo">Sunset<span>Concerts</span></h2>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="artists.html">Artists</a></li>
+                <li><a href="musicians.html">Artists</a></li>
                 <li><a href="contest.html">Contest</a></li>
                 <li><a href="about_us.html">About us</a></li>
             </ul>
