Countdown erstellt und + 1 Card

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<li><a href="contest.html">Contest</a></li>
 			<li><a href="about_us.html">About us</a></li>
 		</ul>
-		<a href="#" class="btn">Login</a>
+		<a href="login.html" class="btn">Login</a>
 	</nav>
 
 	<div class="content">
@@ -37,6 +37,7 @@
 		</div>
 	</div>
 </div>
+
 
 <!-----service section start----------->
 <div class="service">
@@ -64,7 +65,7 @@
 				<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
 
 				<p style="text-align: center;">
-					<a class="button" href="artists.html">Read More</a>
+					<a class="button" href="musicians.html">Read More</a>
 				</p>
 			</div>
 		</div>
@@ -83,6 +84,18 @@
 	</div>
 </div>
 
+
+<div class="card">
+	<i class="far fa-user"></i>
+	<h5>Discount</h5>
+	<div class="pra">
+		<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+
+		<p style="text-align: center;">
+			<a class="button" href="musicians.html">Read More</a>
+		</p>
+	</div>
+</div>
 <!------Contact Me------>
 <div class="contact-me">
 
