--- a/musicians.html
+++ b/musicians.html
@@ -21,7 +21,7 @@
         <li><a href="contest.html">Contest</a></li>
         <li><a href="about_us.html">About us</a></li>
       </ul>
-      <a href="#" class="btn">Login</a>
+      <a href="login.html" class="btn">Login</a>
     </nav>
   </div>
 </header>
