--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
 
 				<p style="text-align: center;">
-					<a class="button" href="#">Read More</a>
+					<a class="button" href="login.html">Read More</a>
 				</p>
 			</div>
 		</div>
@@ -77,25 +77,28 @@
 				<p>Wanna win a free ticket? Let's see if you can guess the same number as the random generator. Can you outsmart it? Give it a try.</p>
 
 				<p style="text-align: center;">
-					<a class="button" href="#">Let's go</a>
+					<a class="button" href="contest.html">Let's go</a>
 				</p>
 			</div>
 		</div>
+
+
+		<div class="card">
+			<i class="far fa-user"></i>
+			<h5>Discount</h5>
+			<div class="pra">
+				<p>Our new discount for 2023 will be launched soon! If you dont wanna miss it, click on "go to countdown" and find out when the discount releases.</p>
+
+				<p style="text-align: center;">
+					<a class="button" href="countdown.html">go to countdown</a>
+				</p>
+			</div>
+		</div>
+
 	</div>
 </div>
 
 
-<div class="card">
-	<i class="far fa-user"></i>
-	<h5>Discount</h5>
-	<div class="pra">
-		<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
-
-		<p style="text-align: center;">
-			<a class="button" href="musicians.html">Read More</a>
-		</p>
-	</div>
-</div>
 <!------Contact Me------>
 <div class="contact-me">
 
