--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 		<div class="newslatter">
 			<form>
 				<input type="email" name="email" id="mail" placeholder="Enter Your Email">
-				<input type="submit" name="submit" value="Login">
+
+				<a href="login.html" class="solution">Login</a>
 			</form>
 		</div>
 	</div>
