Card Icon Anpassung

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 
 		<div class="card">
-			<i class="far fa-user"></i>
+			<i class="far fa-clock"></i>
 			<h5>Discount</h5>
 			<div class="pra">
 				<p>Our new discount for 2023 will be launched soon! If you dont wanna miss it, click on "go to countdown" and find out when the discount releases.</p>
