--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			<i class="far fa-clock"></i>
 			<h5>Discount</h5>
 			<div class="pra">
-				<p>Our new discount for 2023 will be launched soon! If you dont wanna miss it, click on "go to countdown" and find out when the discount releases.</p>
+				<p>Our discount for 2023 will be launched! If you dont wanna miss it, click on "go to countdown" and find out when the discount releases.</p>
 
 				<p style="text-align: center;">
 					<a class="button" href="countdown.html">go to countdown</a>
