--- a/contest.html
+++ b/contest.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contest</title>
+    <link rel="stylesheet" type="text/css" href="css/contest.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -25,5 +26,12 @@
         </nav>
     </div>
 </header>
+
+    <div id= "container">
+        <p›Guess a number between 1-100</p›
+        <p id="outputtext">Enter a number below«</p>
+        <input type="text" id="userInput"> <button id="btn">Enter</button>
+    </div>
+
 </body>
 </html>
