Number Guessing game erstellt

--- a/contest.html
+++ b/contest.html
@@ -2,36 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contest</title>
+    <title>Number Guesser</title>
     <link rel="stylesheet" type="text/css" href="css/contest.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
 </head>
+<body>
 
-<body class="artists">
-<header>
+<div id="container">
+    <br>
+    <br>
+    <br>
+    <br>
+    <p>Guess a number between 1-100</p>
+    <p id="outputtext"> Enter a number below</p>
+    <input type="text" id="userInput"> <button id="btn">Enter</button>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div>
-        <nav>
-            <h2 class="logo">Sunset<span>Concerts</span></h2>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="musicians.html">Artists</a></li>
-                <li><a href="contest.html">Contest</a></li>
-                <li><a href="about_us.html">About us</a></li>
-            </ul>
-            <a href="login.html" class="btn">Login</a>
-        </nav>
+        <a href="index.html" class="btn">go back</a>
     </div>
-</header>
-
-    <div id= "container">
-        <p›Guess a number between 1-100</p›
-        <p id="outputtext">Enter a number below«</p>
-        <input type="text" id="userInput"> <button id="btn">Enter</button>
-    </div>
-
 </body>
+</div>
+
+
+<script src="contest.js"></script>
 </html>
