--- a/musicians.html
+++ b/musicians.html
@@ -75,5 +75,11 @@
 </div>
 
 </body>
+
+<footer class="musicians">
+  <p>by Luisa and Mara</p>
+  <p>This website was made for a school project and isnt official. We'd like to give credits to Tahmid Ahmed and thank him for the amazing tutorial he made about this website template!</p>
+</footer>
+
 <script src="index.js"></script>
 </html>
