--- a/contest.html
+++ b/contest.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Number Guesser</title>
     <link rel="stylesheet" type="text/css" href="css/contest.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -12,6 +13,7 @@
 <body>
 
 <div id="container">
+
     <br>
     <br>
     <br>
