--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <link rel="stylesheet" type="text/css" href="css/login.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -37,13 +37,13 @@
 
 <div class="containeri">
     <form>
-        <label for="usrname">Email</label>
+        <label for="usrname" class="txt">Email</label>
         <input type="text" id="usrname" name="usrname" required>
 
-        <label for="psw">Password</label>
+        <label for="psw" class="txt">Password</label>
         <input type="password" id="psw" name="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
 
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" class="txt">
     </form>
 </div>
 
@@ -58,4 +58,3 @@
 </body>
 <script src="login.js.js"></script>
 </html>
-
