--- a/login.html
+++ b/login.html
@@ -1,60 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-
-    <link rel="stylesheet" type="text/css" href="css/login.css">
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>Login / Sign Up Form</title>
+    <link rel="shortcut icon" href="/assets/favicon.ico">
+    <link rel="stylesheet" href="login2.css">
 </head>
-
-<body class="artists">
-<header>
-    <div>
-        <nav>
-            <h2 class="logo">Sunset<span>Concerts</span></h2>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="musicians.html">Artists</a></li>
-                <li><a href="contest.html">Contest</a></li>
-                <li><a href="about_us.html">About us</a></li>
-            </ul>
-            <a href="login.html" class="btn">Login</a>
-        </nav>
-    </div>
+<body>
 
 
-
-
-</header>
-<br>
-<br>
-<br>
-<br>
-
-<div class="containeri">
-    <form>
-        <label for="usrname" class="txt">Email</label>
-        <input type="text" id="usrname" name="usrname" required>
-
-        <label for="psw" class="txt">Password</label>
-        <input type="password" id="psw" name="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
-
-        <input type="submit" value="Submit" class="txt">
+<div class="container">
+    <form action="/action_page.php" class="form" id="login">
+        <h1 class="form__title">Login</h1>
+        <div class="form__message form__message--error"></div>
+        <div class="form__input-group">
+            <input type="text" class="form__input" autofocus placeholder="Email">
+            <div class="form__input-error-message"></div>
+        </div>
+        <div class="form__input-group">
+            <input type="password" class="form__input" autofocus placeholder="Password">
+            <div class="form__input-error-message"></div>
+        </div>
+        <button class="form__button" type="submit">Continue</button>
+    </form>
+    <form class="form form--hidden" id="createAccount">
+        <h1 class="form__title">Create Account</h1>
+        <div class="form__message form__message--error"></div>
+        <div class="form__input-group">
+            <input type="text" id="signupUsername" class="form__input" autofocus placeholder="Username">
+            <div class="form__input-error-message"></div>
+        </div>
+        <div class="form__input-group">
+            <input type="text" class="form__input" autofocus placeholder="Email Address">
+            <div class="form__input-error-message"></div>
+        </div>
+        <div class="form__input-group">
+            <input type="password" class="form__input" autofocus placeholder="Password">
+            <div class="form__input-error-message"></div>
+        </div>
+        <div class="form__input-group">
+            <input type="password" class="form__input" autofocus placeholder="Confirm password">
+            <div class="form__input-error-message"></div>
+        </div>
+        <button class="form__button" type="submit">Continue</button>
+        <p class="form__text">
+            <a class="form__link" href="./" id="linkLogin">Already have an account? Sign in</a>
+        </p>
     </form>
 </div>
 
-<div class="message">
-    <h3>Password must contain the following:</h3>
-    <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
-    <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
-    <p id="number" class="invalid">A <b>number</b></p>
-    <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+<div class="btnb">
+    <a href="index.html" class="form__button">go back</a>
 </div>
 
+<script src="login2.js"></script>
 </body>
-<script src="login.js.js"></script>
-</html>
