--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
             <input type="password" class="form__input" autofocus placeholder="Confirm password">
             <div class="form__input-error-message"></div>
         </div>
-        <button class="form__button" type="submit">Continue</button>
+        <button class="form__button" type="submit">Submit</button>
         <p class="form__text">
             <a class="form__link" href="./" id="linkLogin">Already have an account? Sign in</a>
         </p>
@@ -50,7 +50,7 @@
 </div>
 
 <div class="btnb">
-    <a href="index.html" class="form__button">go back</a>
+    <a href="index.html" class="form__button">Go back</a>
 </div>
 
 <script src="login2.js"></script>
