--- a/login.html
+++ b/login.html
@@ -21,7 +21,15 @@
             <input type="password" class="form__input" autofocus placeholder="Password">
             <div class="form__input-error-message"></div>
         </div>
-        <button class="form__button" type="submit">Continue</button>
+
+        <button class="form__button" type="submit">Submit</button>
+        <br>
+        <br>
+        <br>
+        <div class="btnb">
+            <a href="index.html" class="form__button">go back</a>
+        </div>
+
     </form>
     <form class="form form--hidden" id="createAccount">
         <h1 class="form__title">Create Account</h1>
@@ -46,12 +54,13 @@
         <p class="form__text">
             <a class="form__link" href="./" id="linkLogin">Already have an account? Sign in</a>
         </p>
+
+
     </form>
 </div>
 
-<div class="btnb">
-    <a href="index.html" class="form__button">go back</a>
-</div>
+
+
 
 <script src="login2.js"></script>
 </body>
