--- a/login.html
+++ b/login.html
@@ -18,43 +18,19 @@
             <div class="form__input-error-message"></div>
         </div>
         <div class="form__input-group">
-            <input type="password" class="form__input" autofocus placeholder="Password">
+            <label for="psw"></label>
+            <input id="psw" type="password" class="form__input" name="psw" autofocus placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+
             <div class="form__input-error-message"></div>
         </div>
 
-        <button class="form__button" type="submit">Submit</button>
+        <button class="form__button">Submit</button>
         <br>
         <br>
 
         <div class="btnb">
             <a href="index.html" class="form__button">go back</a>
         </div>
-
-    </form>
-    <form class="form form--hidden" id="createAccount">
-        <h1 class="form__title">Create Account</h1>
-        <div class="form__message form__message--error"></div>
-        <div class="form__input-group">
-            <input type="text" id="signupUsername" class="form__input" autofocus placeholder="Username">
-            <div class="form__input-error-message"></div>
-        </div>
-        <div class="form__input-group">
-            <input type="text" class="form__input" autofocus placeholder="Email Address">
-            <div class="form__input-error-message"></div>
-        </div>
-        <div class="form__input-group">
-            <input type="password" class="form__input" autofocus placeholder="Password">
-            <div class="form__input-error-message"></div>
-        </div>
-        <div class="form__input-group">
-            <input type="password" class="form__input" autofocus placeholder="Confirm password">
-            <div class="form__input-error-message"></div>
-        </div>
-        <button class="form__button" type="submit">Submit</button>
-        <p class="form__text">
-            <a class="form__link" href="./" id="linkLogin">Already have an account? Sign in</a>
-        </p>
-
 
     </form>
 </div>
