--- a/about_us.html
+++ b/about_us.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" href="about_us.css">
 </head>
 
-<body class="artists">
-<header>
-    <div>
-        <nav>
-            <h2 class="logo">Sunset<span>Concerts</span></h2>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="musicians.html">Artists</a></li>
-                <li><a href="contest.html">Contest</a></li>
-                <li><a href="about_us.html">About us</a></li>
-            </ul>
-            <a href="login.html" class="btn">Login</a>
-        </nav>
+<body>
+<section class="about">
+    <div class="main">
+        <img src="LuisaMara.png">"
+        <div class="about-text">
+            <h1>About Us</h1>
+            <h5>Projekt of<span> Luisa & Mara</span></h5>
+            <p>Hier kommt der Platzhaltertext</p>
+            <a href="index.html" type="button">Go back</a>
+        </div>
+
     </div>
-</header>
-
-
-
+</section>
 </body>
+
 </html>
