--- a/countdown.html
+++ b/countdown.html
@@ -11,16 +11,16 @@
 </head>
 
 
-
+<body>
 
 <div class="container">
     <h1 id="headline">Countdown til 2023 sale</h1>
     <div id="countdown">
-        <ul>
-            <li><span id="days"></span>days</li>
-            <li><span id="hours"></span>Hours</li>
-            <li><span id="minutes"></span>Minutes</li>
-            <li><span id="seconds"></span>Seconds</li>
+        <ul id="timelist">
+            <li><span class="days"></span>days</li>
+            <li><span class="hours"></span>Hours</li>
+            <li><span class="minutes"></span>Minutes</li>
+            <li><span class="seconds"></span>Seconds</li>
         </ul>
     </div>
 <br>
@@ -30,7 +30,7 @@
     <div>
         <a href="index.html" class="btn">go back</a>
     </div>
-
+</div>
 </body>
 <script src="countdown.js"></script>
 </html>
