--- a/login.html
+++ b/login.html
@@ -7,34 +7,12 @@
     <link rel="stylesheet" href="login2.css">
 </head>
 <body>
-
-
-<div class="container">
-    <form action="/action_page.php" class="form" id="login">
-        <h1 class="form__title">Login</h1>
-        <div class="form__message form__message--error"></div>
-        <div class="form__input-group">
-            <input type="text" class="form__input" autofocus placeholder="Email">
-            <div class="form__input-error-message"></div>
-        </div>
-        <div class="form__input-group">
-            <label for="psw"></label>
-            <input id="psw" type="password" class="form__input" name="psw" autofocus placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
-
-            <div class="form__input-error-message"></div>
-        </div>
-
-        <button class="form__button">Submit</button>
-        <br>
-        <br>
-
-        <div class="btnb">
-            <a href="index.html" class="form__button">go back</a>
-        </div>
-
-    </form>
-</div>
-
-<script src="login2.js"></script>
-<script type="text/javascript" src="login.json"></script>
+    <div class="container">
+        <form onsubmit="checkPassword(event)">
+            <input type="text" id="email">
+            <input type="password" id="password">
+            <input type="submit" id="submit" value="Submit">
+        </form>
+    </div>
+<script src="login.js"></script>
 </body>
