--- a/about_us.html
+++ b/about_us.html
@@ -12,11 +12,11 @@
 <body>
 <section class="about">
     <div class="main">
-        <img src="LuisaMara.png">"
+        <img src="img/MicrosoftTeams-image (4).png">"
         <div class="about-text">
             <h1>About Us</h1>
-            <h5>Projekt of<span> Luisa & Mara</span></h5>
-            <p>Hier kommt der Platzhaltertext</p>
+            <h5>Projekt of<span> Mara & Luisa</span></h5>
+            <p>LB02 JavaScript</p>
             <a href="index.html" type="button">Go back</a>
         </div>
 
