--- a/LoginDone.html
+++ b/LoginDone.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LoginDone</title>
+    <link rel="stylesheet" href="css/login2.css">
+
 </head>
 <body>
-
+<h2>You're successfully logged in</h2>
 </body>
 </html>
