--- a/about_us.html
+++ b/about_us.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
-    <link rel="stylesheet" type="text/css" href="about_us.css">
+    <link rel="stylesheet" type="text/css" href="css/about_us.css">
 </head>
 
 <body>
