--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Login / Sign Up Form</title>
     <link rel="shortcut icon" href="/assets/favicon.ico">
-    <link rel="stylesheet" href="login2.css">
+    <link rel="stylesheet" href="css/login2.css">
 </head>
 <body>
 <div class="container">
