--- a/login.html
+++ b/login.html
@@ -11,7 +11,9 @@
     <form onsubmit="checkPassword(event)">
         <input type="text" id="email">
         <input type="password" id="password">
-        <input type="submit" id="submit" value="Submit">
+        <div class="submit">
+            <input type="submit" id="submit" value="Submit">
+        </div>
     </form>
 </div>
 <script src="login.js"></script>
