--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
 
 				<p style="text-align: center;">
-					<a class="button" href="login.html">Read More</a>
+					<a class="button" href="login.html">Login now</a>
 				</p>
 			</div>
 		</div>
