--- a/login.html
+++ b/login.html
@@ -9,7 +9,9 @@
 <body>
 <div class="container">
     <form onsubmit="checkPassword(event)">
+        <p>E-Mail</p>
         <input type="text" id="email">
+        <p>Password</p>
         <input type="password" id="password">
         <div class="submit">
             <input type="submit" id="submit" value="Submit">
