log in now (index)

--- a/about_us.html
+++ b/about_us.html
@@ -17,6 +17,7 @@
             <h1>About Us</h1>
             <h5>Projekt of<span> Mara & Luisa</span></h5>
             <p>LB02 JavaScript</p>
+            <p>We are Mediamaticians in the second year of apprenticeship</p>
             <a href="index.html" type="button">Go back</a>
         </div>
 
