--- a/musicians.html
+++ b/musicians.html
@@ -27,7 +27,7 @@
 </header>
 <div class="slideshow-container fade">
 
-  <!-- Full images with numbers and message Info -->
+  <!-- Banner Bilder -->
   <div class="Containers">
     <div class="MessageInfo">1 / 6</div>
     <img src="img/Arctic_Monkeys.png" style="width:100%">
@@ -58,13 +58,13 @@
     <img src="img/The_Weeknd.png" style="width:100%">
   </div>
 
-  <!-- Back and forward buttons -->
+
   <a class="Back" onclick="plusSlides(-1)">&#10094;</a>
   <a class="forward" onclick="plusSlides(1)">&#10095;</a>
 </div>
 <br>
 
-<!-- The circles/dots -->
+
 <div style="text-align:center">
   <span class="dots" onclick="currentSlide(1)"></span>
   <span class="dots" onclick="currentSlide(2)"></span>
@@ -81,5 +81,5 @@
   <p>This website was made for a school project and isnt official. We'd like to give credits to Tahmid Ahmed and thank him for the amazing tutorial he made about this website template!</p>
 </footer>
 
-<script src="index.js"></script>
+<script src="artists.js"></script>
 </html>
